Updating links on all pages with github links for testing

--- a/checklists-charities/keeping-adequate-books-records.html
+++ b/checklists-charities/keeping-adequate-books-records.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/keeping-adequate-books-records.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/keeping-adequate-books-records.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/checklists-charities/keeping-adequate-books-records.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/checklists-charities/keeping-adequate-books-records.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/listes-controle-organismes-bienfaisance/tenir-registres-comptables-adequats.html"/>
 	
@@ -342,7 +342,7 @@ Keeping adequate books and records</h1>
     
         <h2>Related topics</h2>
 <ul>
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/books-records.html">Books and records</a></li>
+ <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/books-records.html">Books and records</a></li>
 </ul>  
     
 
