--- a/checklists-charities/maintaining-charitys-status-a-legal-entity.html
+++ b/checklists-charities/maintaining-charitys-status-a-legal-entity.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/maintaining-charitys-status-a-legal-entity.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/maintaining-charitys-status-a-legal-entity.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/checklists-charities/maintaining-charitys-status-a-legal-entity.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/checklists-charities/maintaining-charitys-status-a-legal-entity.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/listes-controle-organismes-bienfaisance/conserver-statut-juridique-organisme-bienfaisance.html"/>
 	
@@ -314,7 +314,7 @@ Maintaining the charity's status as a legal entity</h1>
     
         <h2>References</h2>
 <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/external-resources-charities.html#prvncl">Provincial and territorial government information for charities</a></li> 
+ <li><a href="https://cra-design.github.io/charities/external-resources-charities.html#prvncl">Provincial and territorial government information for charities</a></li> 
 </ul>  <p><strong>This checklist is for the charity's use only. Do not mail to the CRA or file with the return.</strong></p>   
     
 
