--- a/checklists-charities/t3010-checklist-avoid-common-mistakes-when-filing-your-return.html
+++ b/checklists-charities/t3010-checklist-avoid-common-mistakes-when-filing-your-return.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/t3010-checklist-avoid-common-mistakes-when-filing-your-return.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/t3010-checklist-avoid-common-mistakes-when-filing-your-return.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/checklists-charities/t3010-checklist-avoid-common-mistakes-when-filing-your-return.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/checklists-charities/t3010-checklist-avoid-common-mistakes-when-filing-your-return.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/listes-controle-organismes-bienfaisance/liste-controle-formulaire-t3010-comment-eviter-erreurs-courantes-lorsque-vous-produisez-votre-declaration.html"/>
 	
@@ -294,9 +294,9 @@ T3010 checklist – how to avoid common mistakes when filing your return</h1>
     
         <h2 class="h4Size">Checklist</h2>
 <p><span lang="EN">Use the following information to avoid a lost return, incorrect financial calculations, and other mistakes that could cause delays</span>:&nbsp;</p>
-<p>&nbsp; <span lang="EN">☐ </span>file a <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/t3010-charity-return-before-you-file.html#cmpltrtn">complete return</a></p>
+<p>&nbsp; <span lang="EN">☐ </span>file a <a href="https://cra-design.github.io/charities/operating-a-registered-charity/t3010-charity-return-before-you-file.html#cmpltrtn">complete return</a></p>
 <p>&nbsp; <span lang="EN">☐ </span>file your return within six months from the end of your charity’s fiscal year</p>
-<p>&nbsp; <span lang="EN">☐ </span>make sure your <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/financial-statements.html">financial statements</a> are included with your return and have the same fiscal year-end</p>
+<p>&nbsp; <span lang="EN">☐ </span>make sure your <a href="https://cra-design.github.io/charities/operating-a-registered-charity/financial-statements.html">financial statements</a> are included with your return and have the same fiscal year-end</p>
 <p>&nbsp; <span lang="EN">☐ </span>file your return even if your charity was <strong>inactive </strong>during its fiscal year</p>
 <p>&nbsp; <span lang="EN">☐ </span>describe your charitable activities, not your fundraising activities, in Section C2</p>
 <p>&nbsp; <span lang="EN">☐ </span>make sure there is a signature of a director/trustee or like official in Section E</p>
@@ -348,8 +348,8 @@ Summerside PE&nbsp; C1N 6E8</p>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/t3010-charity-return-overview.html#nnflng">Consequences of non-filing</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/types-revocation.html#fail2file">Revocation for failure to file</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/t3010-charity-return-overview.html#nnflng">Consequences of non-filing</a></li>
+<li><a href="https://cra-design.github.io/charities/revoking-registered-status/types-revocation.html#fail2file">Revocation for failure to file</a></li>
 </ul>
 <p>&nbsp;</p>
 <p><strong>This checklist is for the charity's use only. Do not mail to the <abbr title="Canada Revenue Canada">CRA</abbr> or file with the return.</strong></p>
