--- a/compliance-audits-and-sanctions/compliance-audits/bringing-charities-back-into-compliance.html
+++ b/compliance-audits-and-sanctions/compliance-audits/bringing-charities-back-into-compliance.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/bringing-charities-back-into-compliance.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/bringing-charities-back-into-compliance.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits/bringing-charities-back-into-compliance.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits/bringing-charities-back-into-compliance.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verification/remettre-organismes-bienfaisance-situation-observation.html"/>
 	
@@ -286,7 +286,7 @@ Bringing charities back into compliance</h1>
         <p>The Charities Directorate monitors Canadian registered charities to ensure they comply with the requirements of the Income Tax Act<em> </em>and the common law rules relating to charities.</p>
 <p><span lang="EN">When we discover non-compliance </span><span>issues including late-filed returns, inaccurate or incomplete returns, official donation receipts that are not issued in accordance with the Act, or disbursement quota shortfalls, we use a series of progressive compliance measures.&nbsp;In less serious cases we use education letters or compliance agreements. In more serious cases we impose monetary penalties, suspend tax-receipting privileges, or, as a last resort, revoke registered status.</span></p>
 <p>Experience shows us that most non-compliance by registered charities is unintentional, accidental, and often of low material consequence.&nbsp;In these cases, we use education letters and compliance agreements to help get the charity back on track. Through this approach, charities are given the opportunity to bring themselves back into compliance without imposing penalties or sanctions.&nbsp;However<span lang="EN-CA">, there are some non-compliance issues, such as involvement in tax shelters or issuing false receipts, that are&nbsp;too serious to enable a charity to maintain its registered status.</span></p>
-<p dir="ltr">We encourage charities to contact us to correct any errors they might have made in the past. Our objective is to work with charities to resolve difficulties and help them get back on track. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidelines-applying-sanctions.html">Guidelines for applying sanctions</a>.<span></span></p>
+<p dir="ltr">We encourage charities to contact us to correct any errors they might have made in the past. Our objective is to work with charities to resolve difficulties and help them get back on track. For more information, go to <a href="https://cra-design.github.io/charities/policies-guidance/guidelines-applying-sanctions.html">Guidelines for applying sanctions</a>.<span></span></p>
 
     
 
