--- a/compliance-audits-and-sanctions/compliance-audits/compliance-audits.html
+++ b/compliance-audits-and-sanctions/compliance-audits/compliance-audits.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verification.html"/>
 	
@@ -303,19 +303,19 @@ Compliance and audits</h1>
     
         <h2 class="mrgn-tp-md">Topics</h2>
 <ul class="list-group">
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/we-promote-compliance.html"><strong>Compliance within the charitable sector</strong> </a><br>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/compliance-audits/we-promote-compliance.html"><strong>Compliance within the charitable sector</strong> </a><br>
 A summary of the Charities Directorate's compliance program, and how charities are selected, types of audit, and what happens after an audit is completed</li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/non-compliance-issues.html"><strong>Non-compliance issues</strong> </a><br>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/compliance-audits/non-compliance-issues.html"><strong>Non-compliance issues</strong> </a><br>
 Non-compliance issues that all charities need to be aware of</li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/bringing-charities-back-into-compliance.html"><strong>Bringing charities back into compliance</strong> </a><br>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/compliance-audits/bringing-charities-back-into-compliance.html"><strong>Bringing charities back into compliance</strong> </a><br>
 When a charity self-identifies non-compliance issues</li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html"><strong>Penalties and suspensions</strong> </a><br>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html"><strong>Penalties and suspensions</strong> </a><br>
 A chart of infractions and the corresponding penalties and suspensions that may be applied when a charity does not meet its legal obligations</li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html#complaints"><strong>Complaints or concerns about registered charities</strong> </a><br>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/contact-charities-directorate.html#complaints"><strong>Complaints or concerns about registered charities</strong> </a><br>
 How to report practices that may relate to non-compliance</li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidelines-applying-sanctions.html"><strong>Guidelines for applying sanctions </strong></a><br>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/policies-guidance/guidelines-applying-sanctions.html"><strong>Guidelines for applying sanctions </strong></a><br>
 The <abbr title="Canada Revenue Agency">CRA</abbr>'s approach to applying penalties and suspensions</li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/court-decisions.html"><strong>Court decisions</strong> </a><br>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/compliance-audits/court-decisions.html"><strong>Court decisions</strong> </a><br>
 A list of compliance-related court decisions involving charities and donors</li>
 </ul>
 
@@ -330,9 +330,9 @@ A list of compliance-related court decisions involving charities and donors</li>
         <h2>Related Links</h2>
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications.html"><span><span><span><span><span><span lang="EN-CA">CRA forms and publications</span></span></span></span></span></span><span lang="EN-CA"></span></a><span lang="EN-CA"><span lang="EN-CA"> </span></span></li>
-<li><span lang="EN-CA"><span lang="EN-CA"></span></span><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-a-index.html"><span><span><span><span><span><span lang="EN-CA">Alphabetical index of topics</span></span></span></span></span></span></a><span lang="EN-CA"><span lang="EN-CA"> </span></span></li>
-<li><span lang="EN-CA"><span lang="EN-CA"></span></span><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html"><span><span><span><span><span><span lang="EN-CA">Glossary</span></span></span></span></span></span><span lang="EN-CA"></span></a><span lang="EN-CA"><span lang="EN-CA"> </span></span></li>
-<li><span lang="EN-CA"><span lang="EN-CA"></span></span><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html"><span><span><span><span><span><span lang="EN-CA">Contact information</span></span></span></span></span></span><span lang="EN-CA"></span></a></li>
+<li><span lang="EN-CA"><span lang="EN-CA"></span></span><a href="https://cra-design.github.io/charities/charities-giving-a-index.html"><span><span><span><span><span><span lang="EN-CA">Alphabetical index of topics</span></span></span></span></span></span></a><span lang="EN-CA"><span lang="EN-CA"> </span></span></li>
+<li><span lang="EN-CA"><span lang="EN-CA"></span></span><a href="https://cra-design.github.io/charities/charities-giving-glossary.html"><span><span><span><span><span><span lang="EN-CA">Glossary</span></span></span></span></span></span><span lang="EN-CA"></span></a><span lang="EN-CA"><span lang="EN-CA"> </span></span></li>
+<li><span lang="EN-CA"><span lang="EN-CA"></span></span><a href="https://cra-design.github.io/charities/contact-charities-directorate.html"><span><span><span><span><span><span lang="EN-CA">Contact information</span></span></span></span></span></span><span lang="EN-CA"></span></a></li>
 </ul>
 
     
