--- a/compliance-audits-and-sanctions/compliance-audits/penalties-suspensions.html
+++ b/compliance-audits-and-sanctions/compliance-audits/penalties-suspensions.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/penalites-suspensions.html"/>
 	
@@ -291,7 +291,7 @@ Penalties and suspensions</h1>
 <section class="alert alert-info">
 	<h2>Important notice</h2>
 	<p>On June 23, 2022, Budget Implementation Act, 2022, No. 1, received Royal Assent. This change in legislation includes new rules that allow charities to make grants to <span class="nowrap">non-qualified</span> donees. As a result, some of the information on this page could change.</p>
-<p>On December 19, 2023, following a public feedback period, the Canada Revenue Agency (CRA) posted the guidance document <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">CG-032, Registered charities making grants to <span class="nowrap">non-qualified</span> donees</a>. This document explains how the CRA will administer the recent changes to the Income Tax Act.</p>
+<p>On December 19, 2023, following a public feedback period, the Canada Revenue Agency (CRA) posted the guidance document <a href="https://cra-design.github.io/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">CG-032, Registered charities making grants to <span class="nowrap">non-qualified</span> donees</a>. This document explains how the CRA will administer the recent changes to the Income Tax Act.</p>
 <p>The <abbr title="Canada Revenue Agency">CRA</abbr> is in the process of reviewing and updating all related guidance products and web pages to ensure they are consistent with the new rules.</p>
 
 </section>
@@ -804,7 +804,7 @@ Penalties and suspensions</h1>
 <li>$500 penalty (assessed when an application for re-registration is made)</li>
 <span class="label label-info">Subsection 188.1(6)</span></ul>
 </details></ul>
-<p>If your charity <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">does not file an annual T3010 information return</a> on time as required under the Act, your charity’s registration will be automatically revoked. It is our practice to limit the assessment of this sanction to qualified donees that file an application for re-registration.&nbsp;</p>
+<p>If your charity <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">does not file an annual T3010 information return</a> on time as required under the Act, your charity’s registration will be automatically revoked. It is our practice to limit the assessment of this sanction to qualified donees that file an application for re-registration.&nbsp;</p>
 
     
 
