--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verifications-et-sanctions/observation-autres-donataires-reconnus/observation-organisations-journalistiques-enregistrees.html"/>
 	
@@ -278,10 +278,10 @@ Compliance for registered journalism organizations</h1>
 <h2>Obligations</h2>
 <p>An <abbr title="Registered journalism organization">RJO</abbr>'s obligations include:</p>
 <ul>
-<li>ensuring that it continues to meet the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html">eligibility criteria for registration</a></li>
+<li>ensuring that it continues to meet the <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html">eligibility criteria for registration</a></li>
 <li>filing <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1000-1.html">Form T1000-1, Registered Journalism Organization Information Return</a> and related documents, within six months after its fiscal period end</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations/books-records-rjo.html">keeping books and records</a> that demonstrate that it continues to meet the requirements under the Act<abbr title="Income Tax Act"></abbr>, and providing these to the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> on request</li>
-<li>ensuring that <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations/issuing-official-donations-receipts-rjo.html">official donation receipts</a> it issues meet the requirements of the Act</li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations/books-records-rjo.html">keeping books and records</a> that demonstrate that it continues to meet the requirements under the Act<abbr title="Income Tax Act"></abbr>, and providing these to the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> on request</li>
+<li>ensuring that <a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations/issuing-official-donations-receipts-rjo.html">official donation receipts</a> it issues meet the requirements of the Act</li>
 <li>ensuring that it does not serve as a conduit by accepting a gift with the condition that it makes a gift to another person or entity</li>
 </ul>
 <h2>Limitation on amounts an <abbr title="Registered journalism organization">RJO</abbr> may receive</h2>
@@ -303,7 +303,7 @@ Compliance for registered journalism organizations</h1>
 </ol>
 <h2>Sanctions</h2>
 <p>In cases where an <abbr title="Registered journalism organization">RJO</abbr> is involved in serious non-compliance, or for repeat or multiple infractions, we may impose sanctions. These range from financial penalties to the temporary suspension of the <abbr title="Registered journalism organization">RJO’</abbr>s tax receipting privileges or both.</p>
-<p>For a list of the sanctions that apply to <abbr title="Registered journalism organization">RJO</abbr>s, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html#rjos">Penalties and suspensions for <abbr title="Registered journalism organization">RJO</abbr>s</a>.</p>
+<p>For a list of the sanctions that apply to <abbr title="Registered journalism organization">RJO</abbr>s, go to <a href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html#rjos">Penalties and suspensions for <abbr title="Registered journalism organization">RJO</abbr>s</a>.</p>
 <p>If an <abbr title="Registered journalism organization">RJO</abbr>'s receipting privileges are suspended, the <abbr title="Registered journalism organization">RJO:</abbr></p>
 <ul>
 <li>cannot issue official donation receipts</li>
@@ -323,7 +323,7 @@ Compliance for registered journalism organizations</h1>
 <p>We may revoke the registration of an <abbr title="Registered journalism organization">RJO</abbr> if it:</p>
 <ul>
 <li>asks for voluntary revocation</li>
-<li>fails to meet its <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/advantages-obligations-becoming-oqd.html">obligations</a> as a qualified donee under the Act</li>
+<li>fails to meet its <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/advantages-obligations-becoming-oqd.html">obligations</a> as a qualified donee under the Act</li>
 </ul>
 <p>A journalism organization that has its registration revoked no longer has qualified donee status.</p>
 <h2>Objections</h2>
@@ -348,8 +348,8 @@ Compliance for registered journalism organizations</h1>
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html">Registered journalism organizations</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html">List of registered journalism organizations</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html">Applying to become a registered journalism organization</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html">Applying to become a registered journalism organization</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records.html">Keeping records</a></li>
 </ul>
 
