--- a/compliance-audits-and-sanctions/compliance-audits-and-sanctions.html
+++ b/compliance-audits-and-sanctions/compliance-audits-and-sanctions.html
@@ -13,8 +13,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verifications-et-sanctions.html"/>
 	
@@ -303,7 +303,7 @@ Compliance, audits and sanctions</h1>
         		
 <section class="gc-drmt">
 	<h3 data-emptyText="Enter heading" class="h5">
-		<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits.html">Compliance for charities </a>
+		<a href="https://cra-design.github.io/charities/compliance-audits.html">Compliance for charities </a>
 	</h3>
 	
 	
@@ -328,7 +328,7 @@ Compliance, audits and sanctions</h1>
         		
 <section class="gc-drmt">
 	<h3 data-emptyText="Enter heading" class="h5">
-		<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees.html">Compliance for other qualified donees</a>
+		<a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees.html">Compliance for other qualified donees</a>
 	</h3>
 	
 	
