--- a/compliance-audits-and-sanctions/compliance-audits/court-decisions.html
+++ b/compliance-audits-and-sanctions/compliance-audits/court-decisions.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/court-decisions.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits/court-decisions.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits/court-decisions.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits/court-decisions.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verification/decisions-cour.html"/>
 	
@@ -335,7 +335,7 @@ Court decisions</h1>
     
         <h2>Related topics</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c08-case-law.html">Summary Policy CSP-C08, Case law </a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c08-case-law.html">Summary Policy CSP-C08, Case law </a></li>
 </ul>
 
     
