--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verifications-et-sanctions/observation-autres-donataires-reconnus/sanctions-organismes-municipaux-publics.html"/>
 	
