--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipalities.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipalities.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verifications-et-sanctions/observation-autres-donataires-reconnus.html"/>
 	
@@ -281,13 +281,13 @@ Compliance for qualified donees</h1>
     
         <p>Refer to the list below to determine how the Canada Revenue Agency promotes compliance and handles non-compliance issues relating to qualified donees.&nbsp;</p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html">Registered Canadian amateur athletic associations</a>&nbsp;(RCAAA)</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html">Registered journalism organizations</a> (RJO)</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipalities.html">Registered municipalities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html">Registered municipal or public bodies performing a function of government in Canada</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-universities.html">Registered universities outside Canada</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-foreign-charities.html">Registered foreign charities that have received a gift from His Majesty in right of Canada</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-low-cost-housing.html">Registered low-cost housing corporations for the aged</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html">Registered Canadian amateur athletic associations</a>&nbsp;(RCAAA)</li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/compliance-registered-journalism-organizations.html">Registered journalism organizations</a> (RJO)</li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipalities.html">Registered municipalities</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html">Registered municipal or public bodies performing a function of government in Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-universities.html">Registered universities outside Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-foreign-charities.html">Registered foreign charities that have received a gift from His Majesty in right of Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-low-cost-housing.html">Registered low-cost housing corporations for the aged</a></li>
 </ul>
 
     
