--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/observation-verifications-et-sanctions/observation-autres-donataires-reconnus/sanctions-acesa.html"/>
 	
@@ -283,7 +283,7 @@ Registered Canadian Amateur Athletic Associations</h1>
         <h2>Sanctions</h2>
 <p>The Canada Revenue Agency (CRA) now has additional tools to encourage compliance with the requirements of the Income Tax Act. Previously, if a registered Canadian amateur athletic association (RCAAA) failed to comply, <abbr title="Canada Revenue Agency">CRA</abbr>’s only recourse was to revoke its registered status. As of January 1, 2012, the <abbr title="Canada Revenue Agency">CRA</abbr> can apply new intermediate sanctions that include financial penalties and the suspension of qualified donee status. This means an <abbr title="registered Canadian amateur athletic association ">RCAAA</abbr> could lose its right to issue official donation receipts and to receive gifts from registered charities for one year.</p>
 <p>Sanctions are often the result of an audit. The <abbr title="Canada Revenue Agency">CRA</abbr>’s administrative practice is to provide written reasons for any proposed sanction or decision, and give organizations an opportunity to respond.</p>
-<p>For a list of sanctions that apply to <abbr title="registered Canadian amateur athletic association ">RCAAA</abbr>s, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html">Penalties and suspensions</a>.</p>
+<p>For a list of sanctions that apply to <abbr title="registered Canadian amateur athletic association ">RCAAA</abbr>s, go to <a href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html">Penalties and suspensions</a>.</p>
 <h2>Objections</h2>
 <p>An <abbr title="registered Canadian amateur athletic association ">RCAAA</abbr> that objects to an assessment or a notice can appeal the <abbr title="Canada Revenue Agency">CRA</abbr>’s decision by filing a notice of objection within 90 days after the day on which the notice was mailed. The notice of objection must be in writing and provide the reasons for the objection and all the relevant facts.</p>
 <p>For more information about this process, go to <a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/objections-appeals-registered-charities-registered-canadian-amateur-athletic-associations-rcaaas-other-listed-qualified-donees.html">Objections and appeals</a>.</p>
@@ -299,7 +299,7 @@ Registered Canadian Amateur Athletic Associations</h1>
         <h2>Related links</h2>
 <ul>
 <li><a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities and certain other qualified donees</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html">Application process and criteria</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html">Application process and criteria</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records</a></li>
 </ul>
